--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,6 @@ multi_line_output = 3
 include_trailing_comma = true
 
 [pytest]
-DJANGO_SETTINGS_MODULE = bullish.test
+DJANGO_SETTINGS_MODULE = bullish.settings
 addopts = --tb=native -cov-report=term-missing -v
 python_files = *_tests.py
